@@ -25,6 +25,7 @@
   - Added base_brand config option for brands to allow multiple base brands.
   - Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
   - Added site config toc_type to allow selecting TOC styles.
+  - Fix perl critic encoding cheack failing. BZ #684509
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
